<resources>
    <string name="app_name">4_Marketing</string>
    <string name="login">تسجيل الدخول</string>
    <string name="email_or_phone">الايميل / التليفون</string>
    <string name="password">كلمة المرور</string>
    <string name="email">الايميل</string>
    <string name="name">الأسم</string>
    <string name="phone">التليفون</string>
    <string name="sign_up">حساب جديد</string>
    <string name="forget_password">استرجاع كلمة المرور</string>
    <string name="edit_password">تعديل كلمة المرور</string>
    <string name="current_password">كلمة المرور الحالبة</string>
    <string name="new_password">كلمة المرور الجديدة</string>
    <string name="confirm">تأكيد</string>
    <string name="edit">تعديل</string>
    <string name="queen_baqa">الباقة الملكية</string>
    <string name="suscribe">اشتراك</string>
    <string name="like">إعجاب</string>
    <string name="comment">تعليق</string>
    <string name="views">مشاهدة</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">العنوان</string>
    <string name="city">المدينة</string>
    <string name="sure">تأكيد</string>
    <string name="passwordd">********</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="send">ارسال</string>
    <string name="add_advertise">إضافة إعلان</string>
    <string name="my_advertising">إعلاناتى</string>
    <string name="profile">البروفايل</string>
    <string name="contact_us">اتصل بنا</string>
    <string name="techniqal_support">الدعم الفنى</string>
    <string name="favorite_adds">الاعلانات المفضلة</string>
    <string name="restore_password">استرجاع كلمة المرور</string>
    <string name="paqqat">الباقات</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="company_main_location">المقر الرئيسى للشركة</string>
    <string name="purpose_of_app">الغرض من التطبيق</string>
    <string name="branches">الفروع</string>
    <string name="site">الموقع</string>
    <string name="customer_service">خدمة العملاء</string>
    <string name="your_message">اكتب رسالتك ...</string>
    <string name="sales">المبيعات</string>
    <string name="manage_app">إدارة التطبيق</string>
    <string name="add_name">اسم الاعلان</string>
    <string name="price">السعر</string>
    <string name="country">البلد</string>
    <string name="add_details"> ... تفاصيل الاعلان</string>
    <string name="publish">نشر</string>
    <string name="no_available_data">لا يوجد بيانات حالية</string>
    <string name="required">هذا الحقل مطلوب</string>
    <string name="error_connection">خطأ فى الاتصال بالشبكة !</string>
    <string name="outofApp">هل تريد الخروج من التطبيق ؟</string>
    <string name="yes">موافق</string>
    <string name="dismiss">الغاء</string>
    <string name="all_adds">كل الاعلانات</string>
    <string name="verify_code">ادخل كود التحقق</string>
    <string name="code">الكود</string>
    <string name="confirm_password">تأكيد كلمة المرور</string>
    <string name="current_ads">الاعلانات الحالية</string>
    <string name="edit_add">تعديل الاعلان</string>
    <string name="endded_ads">الاعلانات المنتهية</string>
</resources>
