<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_advertise"
            android:icon="@drawable/adds"
            android:title="@string/add_advertise" />
        <item
            android:id="@+id/nav_myAdvertising"
            android:icon="@drawable/edit"
            android:title="@string/my_advertising" />
        <item
            android:id="@+id/nav_myProfile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/contact"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/nav_techniqal_support"
            android:icon="@drawable/support"
            android:title="@string/techniqal_support" />

        <item
            android:id="@+id/nav_favorite_adds"
            android:icon="@drawable/favo"
            android:title="@string/favorite_adds" />

        <item
            android:id="@+id/nav_restore_password"
            android:icon="@drawable/login"
            android:title="@string/restore_password" />

        <item
            android:id="@+id/nav_edit_password"
            android:icon="@drawable/login"
            android:title="@string/edit_password" />

        <item
            android:id="@+id/nav_paqqat"
            android:icon="@drawable/packagee"
            android:title="@string/paqqat" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>
