<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ContactUsFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

       <LinearLayout
           android:layout_width="180dp"
           android:layout_height="wrap_content"
           android:padding="2dp"
           android:layout_marginTop="5dp"
           android:id="@+id/baqa_type_layout_id"
           android:background="@drawable/yellow_background"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent" >
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="16sp"
               android:layout_marginStart="12dp"
               android:text="@string/company_main_location"
               android:id="@+id/baqa_type_txtV_id"
               android:textColor="@android:color/black"/>
       </LinearLayout>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="14sp"
           android:layout_marginStart="12dp"
           android:layout_marginTop="10dp"
           android:text="@string/company_main_location"
           android:id="@+id/main_location_val_txtV_id"
           android:textColor="@android:color/black"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="15sp"
           android:layout_marginTop="10dp"
           android:layout_marginStart="12dp"
           android:text="@string/purpose_of_app"
           android:id="@+id/purpose_ofApp_txtV_id"
           android:textColor="@android:color/black"/>

       <LinearLayout
           android:layout_width="180dp"
           android:layout_height="wrap_content"
           android:padding="2dp"
           android:layout_marginTop="10dp"
           android:id="@+id/company_branches_layout_id"
           android:background="@drawable/yellow_background"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent" >
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="16sp"
               android:layout_marginStart="12dp"
               android:text="@string/branches"
               android:id="@+id/company_branches_txtV_id"
               android:textColor="@android:color/black"/>
       </LinearLayout>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="15sp"
           android:layout_marginStart="12dp"
           android:layout_marginTop="10dp"
           android:text="@string/branches"
           android:id="@+id/branches_val_txtV_id"
           android:textColor="@android:color/black"/>

       <LinearLayout
           android:layout_width="180dp"
           android:layout_height="wrap_content"
           android:padding="2dp"
           android:layout_marginTop="10dp"
           android:id="@+id/company_address_layout_id"
           android:background="@drawable/yellow_background"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent" >
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="16sp"
               android:layout_marginStart="12dp"
               android:text="@string/address"
               android:textColor="@android:color/black"/>
       </LinearLayout>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="15sp"
           android:layout_marginStart="12dp"
           android:layout_marginTop="10dp"
           android:text="@string/address"
           android:id="@+id/company_address_txtV_id"
           android:textColor="@android:color/black"/>

       <com.google.android.gms.maps.MapView
           android:id="@+id/scheduled_mapView"
           android:layout_width="match_parent"
           android:layout_height="150dp"
           android:layout_marginStart="10dp"
           android:layout_marginEnd="10dp"
           android:layout_marginTop="10dp" />

       <LinearLayout
           android:layout_width="180dp"
           android:layout_height="wrap_content"
           android:padding="2dp"
           android:layout_marginTop="15dp"
           android:id="@+id/phone_layout_id"
           android:background="@drawable/yellow_background"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent" >
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="16sp"
               android:layout_marginStart="12dp"
               android:text="@string/phone"
               android:textColor="@android:color/black"/>
       </LinearLayout>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="15sp"
           android:layout_marginStart="12dp"
           android:layout_marginTop="10dp"
           android:text="@string/phone"
           android:id="@+id/phone_val_txtV_id"
           android:textColor="@android:color/black"/>

       <LinearLayout
           android:layout_width="180dp"
           android:layout_height="wrap_content"
           android:padding="2dp"
           android:layout_marginTop="10dp"
           android:id="@+id/email_layout_id"
           android:background="@drawable/yellow_background"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent" >
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="16sp"
               android:layout_marginStart="12dp"
               android:text="@string/email"
               android:textColor="@android:color/black"/>
       </LinearLayout>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="15sp"
           android:layout_marginStart="12dp"
           android:layout_marginTop="10dp"
           android:text="@string/email"
           android:id="@+id/email_val_txtV_id"
           android:textColor="@android:color/black"/>

       <LinearLayout
           android:layout_width="180dp"
           android:layout_height="wrap_content"
           android:padding="2dp"
           android:layout_marginTop="10dp"
           android:id="@+id/site_layout_id"
           android:background="@drawable/yellow_background"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent" >
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="16sp"
               android:layout_marginStart="12dp"
               android:text="@string/site"
               android:textColor="@android:color/black"/>
       </LinearLayout>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="15sp"
           android:layout_marginStart="12dp"
           android:layout_marginTop="10dp"
           android:text="@string/site"
           android:id="@+id/site_val_txtV_id"
           android:textColor="@android:color/black"/>

   </LinearLayout>

</FrameLayout>