<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="3dp"
    android:layout_margin="4dp"
    android:background="@drawable/card_white_background">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="160dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo"
        android:id="@+id/currentAdvertise_main_imageV_id" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="3dp"
        android:weightSum="3"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/currentAdvertise_main_imageV_id">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:gravity="start|center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"
                android:textColor="@android:color/black"
                android:id="@+id/currentAdvertise_like_txtV_id"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/currentAdvertise_fav_imageV_id"
                android:src="@drawable/ic_favorite_border_black_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center|center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"
                android:textColor="@android:color/black"
                android:id="@+id/currentAdvertise_comment_txtV_id"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/currentAdvertise_comment_imageV_id"
                android:src="@drawable/ic_comment_black_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:gravity="end|center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/views"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"
                android:textColor="@android:color/black"
                android:id="@+id/currentAdvertise_views_txtV_id"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/currentAdvertise_view_imageV_id"
                android:src="@drawable/eye" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>